--- a/ann/ANN_A1_Group01/q4.ipynb
+++ b/ann/ANN_A1_Group01/q4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 24,
    "id": "90e1bb11-7a7c-470a-aed9-299eaa0a29b4",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,8 @@
     "from sklearn.neural_network import MLPClassifier\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.metrics import accuracy_score\n",
-    "import time"
+    "import time\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -57,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "446712d7-16cb-43a5-8a29-144db9d4227f",
    "metadata": {},
    "outputs": [],
@@ -73,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "beaff783-f99d-4dce-912e-01c41fe57e28",
    "metadata": {},
    "outputs": [
@@ -81,14 +82,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sklearn 1-layer MLP accuracy: 0.4147 | Training time: 89.7s\n"
+      "Sklearn 1-layer MLP accuracy: 0.4496 | Training time: 15.1s\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/mimo/.config/jupyterlab-desktop/jlab_server/lib/python3.12/site-packages/sklearn/neural_network/_multilayer_perceptron.py:781: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (50) reached and the optimization hasn't converged yet.\n",
+      "/home/mimo/.config/jupyterlab-desktop/jlab_server/lib/python3.12/site-packages/sklearn/neural_network/_multilayer_perceptron.py:781: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (10) reached and the optimization hasn't converged yet.\n",
       "  warnings.warn(\n"
      ]
     }
@@ -101,7 +102,7 @@
     "\n",
     "# Model 1: Single hidden layer (100 units)\n",
     "mlp1 = MLPClassifier(hidden_layer_sizes=(100,), activation='logistic', \n",
-    "                     solver='sgd', learning_rate_init=0.1, max_iter=50, random_state=42)\n",
+    "                     solver='sgd', learning_rate_init=0.1, max_iter=10, random_state=12)\n",
     "\n",
     "start = time.time()\n",
     "mlp1.fit(X_train_scaled, y_train.ravel())  # scikit-learn expects labels as 1D array\n",
@@ -113,15 +114,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "d88e2cf1-3665-42bf-b56f-3169243549dc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sklearn 3-layer MLP accuracy: 0.4641 | Training time: 18.4s\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/mimo/.config/jupyterlab-desktop/jlab_server/lib/python3.12/site-packages/sklearn/neural_network/_multilayer_perceptron.py:781: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (10) reached and the optimization hasn't converged yet.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# Model 2: Three hidden layers (100, 50, 50)\n",
     "mlp2 = MLPClassifier(hidden_layer_sizes=(100,50,50), activation='logistic', \n",
-    "                     solver='sgd', learning_rate_init=0.1, max_iter=50, random_state=42)\n",
+    "                     solver='sgd', learning_rate_init=0.1, max_iter=10, random_state=12)\n",
     "\n",
     "start = time.time()\n",
     "mlp2.fit(X_train_scaled, y_train.ravel())\n",
@@ -133,8 +150,136 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
+   "id": "bef3cda6-5eb5-463e-9622-12ff860aa1a8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'fit': {'sample_weight': None}, 'partial_fit': {'sample_weight': None, 'classes': None}, 'score': {'sample_weight': None}}"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mlp2.get_metadata_routing()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "08b597cb-7c29-4969-8f4a-7ee0bbc77f2b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'activation': 'logistic',\n",
+       " 'alpha': 0.0001,\n",
+       " 'batch_size': 'auto',\n",
+       " 'beta_1': 0.9,\n",
+       " 'beta_2': 0.999,\n",
+       " 'early_stopping': False,\n",
+       " 'epsilon': 1e-08,\n",
+       " 'hidden_layer_sizes': (100, 50, 50),\n",
+       " 'learning_rate': 'constant',\n",
+       " 'learning_rate_init': 0.1,\n",
+       " 'max_fun': 15000,\n",
+       " 'max_iter': 10,\n",
+       " 'momentum': 0.9,\n",
+       " 'n_iter_no_change': 10,\n",
+       " 'nesterovs_momentum': True,\n",
+       " 'power_t': 0.5,\n",
+       " 'random_state': 12,\n",
+       " 'shuffle': True,\n",
+       " 'solver': 'sgd',\n",
+       " 'tol': 0.0001,\n",
+       " 'validation_fraction': 0.1,\n",
+       " 'verbose': False,\n",
+       " 'warm_start': False}"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mlp2.get_params(deep=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "d7ce67f1-b33a-4ed6-9c99-851e53280fed",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## dataset\n",
+    "def load_cifar10(path):\n",
+    "    data, labels = [], []\n",
+    "    for i in range(1, 6):\n",
+    "        with open(os.path.join(path, f\"data_batch_{i}\"), 'rb') as f:\n",
+    "            batch = pickle.load(f, encoding='bytes')\n",
+    "            data.append(batch[b'data'])\n",
+    "            labels += batch[b'labels']\n",
+    "    X = np.concatenate(data).astype(np.float32) / 255.0\n",
+    "    y = np.array(labels).reshape(-1, 1)\n",
+    "    return X, y\n",
+    "\n",
+    "X=load_cifar10(\"cifar\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "9204029c-5c50-4129-a1e1-e50d3f312f65",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3072,)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X[0][0].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "a271c63a-8ac1-4419-beff-91deaf7eeffd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([5, 8, 8, ..., 0, 8, 0])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mlp2.predict(X[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e96be4fa-accd-465c-b0f2-c2915d6482e1",
    "metadata": {},
    "outputs": [],
    "source": []
